--- a/calculator-design.html
+++ b/calculator-design.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="/16-12/calculator-design.css">
+    <link rel="stylesheet" href="/calculator-design.css">
     
     <!-- bootstrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,14 +18,12 @@
 </head>
 
 <body>
-    <div class="background p-5">
+    <div class="background justify-content-center align-items-center">
         <div class="container w-25 p-0">
             <div class="calculator-container bg-white p-1">
                 <table class="table table-bordered m-0">
                     <thead>
                         <tr>
-                            <!-- <input class="p-0 form-control rounded-top-4 rounded-bottom-0 text-light fs-2 form-control-lg bg-black border-bottom-0"
-                                type="text" placeholder="" aria-label=".form-control-lg example"> -->
                             <input class="p-0 text-light fs-1 bg-black border-bottom-0" type="text" id="input">
                         </tr>   
                     </thead>
@@ -64,7 +62,7 @@
             </div>
         </div>
     </div>
-    <script src="/16-12/calculator-design.js"></script>
+    <script src="/calculator-design.js"></script>
 </body>
 
 </html>
